fixed SVG bug that placed the images in the middle of the screen on iOS (phone not tablet)

--- a/src/stylesheets/contactForm.css
+++ b/src/stylesheets/contactForm.css
@@ -41,3 +41,9 @@ input[type=submit] {
 input[type=submit]:hover {
   background-color: #45a049;
 }
+
+@media only screen and (max-device-width : 480px) {
+  #contact-form {
+    width: 85%;
+  }
+}
